# alphazero

./: .gitignore  .ubsignore  AGENTS.md  Makefile  README.md  evalset.json  evalset.labels.json  modal_app.py  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
alphazero/: arena.py  baselines.py  benchmark.py  c4_certify.py  c4_solver.py  elo_ladder.py  game.py  mcts.py  network.py  play.py  selfplay.py  train.py
alphazero/games/: __init__.py  connectfour.py  go.py  gomoku.py  tictactoe.py
docs/: AGENT_MAIL.md  ARCHITECTURE.md  BENCHMARKING.md  C4_FINDINGS.md  C4_ROBUSTNESS.md  C4_SOLVING.md  JAX_C4_MIGRATION.md  OTHELLO_AB_RUNS.md  OTHELLO_ELO_PLAN.md
experiments/jax_c4_spike/: .gitignore  bench.py  modal_bench.py  network.py  pyproject.toml
jaxzero/: __init__.py  arena.py  checkpoint_elo.py  cli.py  evaluate.py  game_specs.py  modal_train.py  net.py  selfplay.py  train.py
tests/: conftest.py  test_arena.py  test_baselines.py  test_benchmark.py  test_c4_anchor.py  test_c4_certify.py  test_c4_solver.py  test_connectfour.py  test_elo_ladder.py  test_go.py  test_gomoku.py  test_jaxzero_arena.py  test_jaxzero_checkpoint_elo.py  test_jaxzero_modal_train.py  test_jaxzero_phase1.py  test_jaxzero_transformer.py  test_mcts.py  test_modal_app.py  test_network.py  test_play.py  test_selfplay.py  test_tictactoe.py  test_train.py
