[project]
name = "alphazero"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "wandb>=0.27.0",
]

[project.scripts]
alphazero-c4-certify = "alphazero.c4_certify:main"
alphazero-elo-ladder = "alphazero.elo_ladder:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
modal = [
    "modal>=0.64",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alphazero"]
