[project]
name = "alphazero"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "wandb>=0.27.0",
    "jax>=0.10.1",
    "pgx>=2.6.0",
    "mctx>=0.0.6",
    "flax>=0.12.7",
    "optax>=0.2.8",
]

[project.scripts]
alphazero-c4-certify = "alphazero.c4_certify:main"
alphazero-elo-ladder = "alphazero.elo_ladder:main"
jaxzero-train = "jaxzero.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
modal = [
    "modal>=0.64",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alphazero", "jaxzero"]
