[project]
name = "jax-c4-spike"
version = "0.0.0"
description = "JAX+pgx+mctx Connect Four self-play throughput spike (isolated from the main alphazero project)"
requires-python = ">=3.12"
dependencies = [
    "jax",
    "pgx>=2.0.0",
    "dm-haiku",
    "mctx",
    "optax",
    # Local jax stays CPU; modal is only the launcher for the GPU benchmark
    # (the GPU image installs jax[cuda12] separately).
    "modal>=0.64",
]

# Standalone project: deliberately NOT part of the parent `alphazero` project's
# dependency set. Run everything from inside this directory (uv resolves against
# this pyproject, not the repo root), so JAX never leaks into the main env.
[tool.uv]
package = false
